# ai_product_recommendation

./: .gitignore  README.md  app.py  pyproject.toml
data/: client_requests.json  product_benchmarks.csv
docs/: slide-deck-outline.md
docs/superpowers/plans/: 2026-04-09-agentic-recommendation-engine.md
docs/superpowers/specs/: 2026-04-09-agentic-recommendation-engine-design.md
src/kargo_product_recommendation_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/kargo_reco/: __init__.py  agent.py  benchmark_loader.py  config.py  guardrails.py  llm.py  main.py  reasoning.py  recommender.py  schemas.py  tools.py  trace.py  tracing.py  ui.py  workflow.py
tests/: conftest.py  test_agent.py  test_benchmark_loader.py  test_guardrails.py  test_llm.py  test_recommender.py  test_schemas.py  test_tools.py  test_ui.py  test_workflow.py
